# App.JarSystem

./: .gitignore  0002-usar-apikeys-properties.patch  apikeys.properties  core-restructure.patch  d  exit  local.properties.example  quitar-emojis.patch  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hey-nexus_es_android_v4_0_0.ppn  jarvis-speech-499817-a4468d191853.json  jarvis.ppn
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/proto/: nexus.proto
app/src/main/res/drawable/: anim_mic_vibrate.xml  bg_ambient_cyan.xml  bg_ambient_violet.xml  bg_checkbox_selector.xml  bg_gradient_login.xml  bg_hero_circle.xml  bg_hero_glow_pulse.xml  bg_icon_circle_primary.xml  bg_icon_circle_secondary.xml  bg_permission_card.xml  bg_search_panel.xml  btn_accent_gradient.xml  btn_allow_all.xml  btn_permission_active.xml  btn_primary_gradient.xml  btn_secondary_outline.xml  btn_skip_dradient.xml  gradient_background.xml  gradient_line.xml  ic_mic_vector.xml  icon_background_blue.xml  icon_background_green.xml  info_box_background.xml  jar_gradient_background.xml  orb_background.xml  panel_background_rounded.xml  permission_row_bg.xml  progress_bar_custom.xml  progress_bar_drawable.xml  rounded_top_corners.xml  status_dot_bg.xml  transcription_background.xml
app/src/main/res/font/: googlesans.xml
app/src/main/res/layout/: activity_api_test.xml  activity_jar.xml  activity_jarvis_orb_view.xml  activity_login.xml  activity_main.xml  activity_train.xml  dialog_guardar_intent.xml  overlay_jarvis.xml  view_bar.xml
(+97 files in other folders)
